--- a/express-render-main/package.json
+++ b/express-render-main/package.json
@@ -14,6 +14,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
