--- a/express-render-main/package.json
+++ b/express-render-main/package.json
@@ -24,6 +24,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
